--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,16 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-inverse">
+      <a class="navbar-brand" href="#"></a>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="http://localhost:3000/">ONE</a>
+          <a class="nav-item nav-link" href="http://localhost:3000/pages/two">TWO</a>
+          <a class="nav-item nav-link" href="http://localhost:3000/pages/three">THREE</a>
+        </div>
+      </div>
+    </nav>
     <%= yield %>
   </body>
 </html>
